--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: system-ui, sans-serif;
   line-height: 1.5;
@@ -76,7 +80,7 @@ td a {
 }
 
 /* media item dialog */
-dialog {
+/*dialog {
   position: fixed;
   top: 5%;
   height: 80%;
@@ -84,18 +88,21 @@ dialog {
   z-index: 9999;
   color: rgba(255, 255, 255, 0.87);
 }
+*/
 
-dialog img,
+/*dialog img,
 video {
   height: 70%;
   object-fit: contain;
 }
+*/
 
 /* single view */
-img,
+/*img,
 video {
   max-width: 100%;
 }
+*/
 
 /* Form */
 form {
@@ -133,7 +140,7 @@ form textarea {
   border-radius: 5px;
 }
 
-button {
+/*button {
   margin: 10px 0;
   padding: 10px;
   border-radius: 5px;
@@ -142,3 +149,4 @@ button {
   border: none;
   cursor: pointer;
 }
+*/
